# antiForget-dk-sft

./: .gitignore  README.md  README_CN.md  dl.py  main.py  model.py  pyproject.toml  train.py
data/: example_instruction_response.jsonl  example_messages_with_system.jsonl  example_messages_without_system.jsonl  example_plain_text.jsonl
scripts/: chat.py  check_layers.py  download.py  process_ruozhiba.py  train.py
src/sft_distill_mil/: __init__.py  model.py  trainer.py
