[project]
name = "sft-distill-mil"
version = "0.1.0"
description = "Block Expansion + Knowledge Distillation for LLM Fine-tuning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modelscope>=1.36.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
]

[project.scripts]
train = "sft_distill_mil.trainer:train"
