[project]
name = "sft-distill-mil"
version = "0.1.0"
description = "Block Expansion + Knowledge Distillation for LLM Fine-tuning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modelscope>=1.36.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "accelerate>=0.26.0"
]

[project.scripts]
train = "sft_distill_mil.trainer:train"
